# libcontract

./: .gitignore  LICENSE  README.md  create_contract_lib.py
examples/array/: CMakeLists.txt  README.md  config.cmake.in
examples/array/src/: CMakeLists.txt  array.c  array.h
examples/array/tests/: CMakeLists.txt  test_array.c
examples/person/: CMakeLists.txt  README.md
examples/person/src/: CMakeLists.txt  main.c  person.c  person.h
examples/person/tests/: CMakeLists.txt  test_person.cc
ext-template/: .clang-format  CMakeLists.txt  Makefile.am  README.md  config.cmake.in  configure.ac  contract.pc.in
ext-template/include/contract/: contract.h  ut
ext-template/src/: CMakeLists.txt  contract.c
ext-template/tests/: CMakeLists.txt  standard_tests.h  test_basics.cc  test_contract_audit.c  test_contract_default.c  test_contract_level_override.c  test_contract_off.c  test_explicit_behviour.c  test_helper.c  test_helper.h  ut
std-template/: .clang-format  CMakeLists.txt  Makefile.am  README.md  config.cmake.in  configure.ac  contract.pc.in
std-template/include/contract/: contract.h
std-template/include/contract/ut/: CppUTest.h  check.h  cmocka.h  framework.h  gtest.h
std-template/src/: CMakeLists.txt  contract.c
std-template/tests/: CMakeLists.txt  standard_tests.h  test_basics.cc  test_contract_audit.c  test_contract_default.c  test_contract_level_override.c  test_contract_off.c  test_helper.c  test_helper.h
std-template/tests/ut/: CMakeLists.txt  test_ut_check.c  test_ut_cmocka.c  test_ut_cpputest.cc  test_ut_gtest.cc  test_ut_nested_checks.c
